# Othello_Chal

./: README.md  pyproject.toml
othello_envx/: ai.py  board.py  main.py  screens.py
