[tool.poetry]
name = "othello-envx"
version = "0.1.0"
description = ""
authors = ["Envxsion <74938513+Envxsion@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
windows-curses = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
