[tool.poetry]
name = "othello-envx"
version = "0.1.0"
description = ""
authors = ["Envxsion <74938513+Envxsion@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
